# rideshare-pilots

./: .gitignore  README.md  data_science.ipynb  main.py  play.py  pyproject.toml  testing.ipynb
final-report-template-latex/: aaai25.bib  aaai25.sty  checklist-and-assessment.tex  final-report.tex
game/: FindCarEnv.py  GridGeneration.py  ObstacleGeneration.py  utils.py  wrappers.py
htn/: my_htn.py
report/: aaai25.bib  checklist-and-assessment.tex  final-report.tex  macros.tex
