[project]
name = "rideshare-pilots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Addison Hanrattie"]
requires-python = ">=3.14"
dependencies = [
    "annotated-types>=0.7.0",
    "gtpyhop>=1.4.0",
    "gymnasium[other]>=1.2.2",
    "numpy>=2.3.4",
    "pygame>=2.6.1",
    "w9-pathfinding>=0.1.2",
]

[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
